--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,159 @@
-.App {
+body{
+  background-color:rgb(226, 223, 223) ;
+}
+
+.header-section{
+  background: url("./img/header-background-edited.jpg") 
+  no-repeat 
+  center
+  center
+  scroll;
+  overflow: hidden;
+  background-size:cover;
+  margin: 0.5em;
+  border-radius: 0.5em;
+}
+
+#app-name{
+  text-align : center;
+  font-size : x-large;
+  font-weight : 500;
+  color: white;
+  height: 25vh;
+
+}
+
+#header-text{
+  color: rgb(141, 57, 250);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: absolute;
+  top: 5em;
+  left: 7em;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.convert-section{
+  border: solid 1px rgb(141, 57, 250) ;
+  margin: 1em;
+  border-radius: 0.7em;
+  padding: 0.4em;
+ 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#convert-title{
+  text-align: center;
+  font-size: larger;
+  color:rgb(141, 57, 250) ;
+  font-weight: 600;
+}
+
+.convert-form{
+  margin-left: 0.8em;
+}
+
+select{
+  background:transparent;
+  width: 170px;
+  padding: 2px;
+  font-family: "Helvetica", sans-serif;
+  font-size:11px;
+  font-weight:600;
+  color:black;
+  line-height: 1;
+  border: 0;
+  border-radius: 0;
+  height: 22px;
+  -webkit-appearance: none;
+}
+
+.select-div{
+  width: 170px;
+  height: 22px;
+  overflow: hidden;
+  border:rgb(141, 57, 250) 1px solid;
   }
-  to {
-    transform: rotate(360deg);
+
+  #from{
+    margin-bottom: 2em;
   }
+
+ #from:focus-visible{
+       outline: none;
+     }
+
+ #to:focus-visible{
+      outline: none;
+    }
+ 
+.convert-form-section label{
+  display: block;
+  padding-bottom: 0.5em;
+}
+
+#amount-to-convert{
+  padding-top: 1em;
+}
+
+.convert-form input{
+  padding: 4em;
+  display: inline;
+  margin-bottom: 2em;
+}
+
+.convert-amount{
+  text-align: center;
+  align-items: center;
+}
+
+.convert-amount input{
+  width: 3cm;
+  padding: 0.5em;
+  font-size: small;
+  
+}
+
+#convert-btn{
+  display: inline-flex;
+  
+  margin-top: 1em;
+  border: none;
+  background-color:rgb(141, 57, 250) ;
+  color: white;
+  margin-left: 1em;
+  padding : 0.8em 2em;
+}
+
+
+
+#convert-btn:hover{
+  cursor: pointer;
+  filter: brightness(1.5);
+  color: black;
+  
+}
+
+#amount{
+  border: none;
+  padding: 0.8em;
+}
+
+#amount:focus-visible{
+  outline: none;
+}
+
+#amount:focus{
+  border:  solid 1px rgb(141, 57, 250);
+}
+input[type=number]:focus{
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
+	-moz-box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
+	box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
+	border: 2px solid rgb(141, 57, 250) ;
+	background-color: rgb(234, 220, 253) ;
+	color:rgb(141, 57, 250) ;
+  border: none;
+}
+
+#footer-link{
+  text-align: center;
 }
